--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Strict</title>
-  <!-- css start -->
+
+  <!-- Font-awesome CSS -->
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+  <!-- Main CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -91,21 +94,111 @@
       <div class="showcase_img">
         <div class="show_img">
           <img class="show_img_width" src="images/show1.jpg" alt="Strict">
+          <div class="overlay">
+            <!-- <div class="text">Hello World</div> -->
+            <div class="con_zoom_link">
+              <div class="zoom">
+                <a href="#">
+                  <img src="images/zoom.png" alt="Zoom Image">
+                </a>
+              </div>
+              <div class="link">
+                <a href="#">
+                  <img src="images/link_normal.png" alt="Image link">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="show_img">
           <img class="show_img_width" src="images/show2.jpg" alt="Strict">
+          <div class="overlay">
+            <!-- <div class="text">Hello World</div> -->
+            <div class="con_zoom_link">
+              <div class="zoom">
+                <a href="#">
+                  <img src="images/zoom.png" alt="Zoom Image">
+                </a>
+              </div>
+              <div class="link">
+                <a href="#">
+                  <img src="images/link_normal.png" alt="Image link">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="show_img">
           <img class="show_img_width" src="images/show3.jpg" alt="Strict">
+          <div class="overlay">
+            <!-- <div class="text">Hello World</div> -->
+            <div class="con_zoom_link">
+              <div class="zoom">
+                <a href="#">
+                  <img src="images/zoom.png" alt="Zoom Image">
+                </a>
+              </div>
+              <div class="link">
+                <a href="#">
+                  <img src="images/link_normal.png" alt="Image link">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="show_img">
           <img class="show_img_width" src="images/show4.jpg" alt="Strict">
+          <div class="overlay">
+            <!-- <div class="text">Hello World</div> -->
+            <div class="con_zoom_link">
+              <div class="zoom">
+                <a href="#">
+                  <img src="images/zoom.png" alt="Zoom Image">
+                </a>
+              </div>
+              <div class="link">
+                <a href="#">
+                  <img src="images/link_normal.png" alt="Image link">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="show_img">
           <img class="show_img_width" src="images/show5.jpg" alt="Strict">
+          <div class="overlay">
+            <!-- <div class="text">Hello World</div> -->
+            <div class="con_zoom_link">
+              <div class="zoom">
+                <a href="#">
+                  <img src="images/zoom.png" alt="Zoom Image">
+                </a>
+              </div>
+              <div class="link">
+                <a href="#">
+                  <img src="images/link_normal.png" alt="Image link">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="show_img">
           <img class="show_img_width" src="images/show6.jpg" alt="Strict">
+          <div class="overlay">
+            <!-- <div class="text">Hello World</div> -->
+            <div class="con_zoom_link">
+              <div class="zoom">
+                <a href="#">
+                  <img src="images/zoom.png" alt="Zoom Image">
+                </a>
+              </div>
+              <div class="link">
+                <a href="#">
+                  <img src="images/link_normal.png" alt="Image link">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -119,29 +212,22 @@
     <div class="form_container">
       <h2>Stay with us</h2>
       <p>We ensure quailty & support</p>
-
-      <!-- form start -->
       <!--Form Start-->
-
       <div class="form">
-        <form action="#" enctype="multipart/form-data">
-          <input type="text" class="full-name in-field" name="full-name" placeholder="Full Name">
-          <br><br>
-          <input type="email" class="email in-field" name="email" placeholder="Email Address">
-          <br><br>
-          <textarea class="message in-field" name="message" placeholder="Message" cols="76" rows="4" ></textarea>
-          <br>
-        </form>
+        <input type="text" class="name form-field-common" placeholder="Full Name">
+        <input type="email" class="email form-field-common" placeholder="Email Address">
+        <textarea name="" id="" cols="30" rows="10" class="message form-field-common" placeholder="Message"></textarea>
         <div class="form_footer">
           <div class="left_align">
-            <input type="checkbox" class="subscribe" value="subscribe" name="subscribe"><span class="subs">Subscribe Newsletter</span>
+            <input type="checkbox" class="subscribe" value="subscribe" name="subscribe">
+            <span class="subs"> Subscribe Newsletter</span>
           </div>
           <div class="right_align">
             <button type="submit" class="submit">Send</button>
           </div>
         </div>
-      <!-- form end -->
       </div>
+      <!-- form end -->
     </div>
   </div>
 </section>
